# blender-claude-mcp

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  INTEGRATION_GUIDE_AGENCY_AGENTS.md
addon/blender-ai-mcp-main/blender-ai-mcp-main/: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
addon/blender-ai-mcp-main/blender-ai-mcp-main/.github/: FUNDING.yml
addon/blender-ai-mcp-main/blender-ai-mcp-main/.github/workflows/: pr_checks.yml  release.yml
addon/blender-ai-mcp-main/blender-ai-mcp-main/_docs/: AVAILABLE_TOOLS_SUMMARY.md  PROPOSED_TOOLS1.md  TOOLS_ARCHITECTURE_DEEP_DIVE.md
addon/blender-ai-mcp-main/blender-ai-mcp-main/_docs/TOOLS/: COLLECTION_TOOLS_ARCHITECTURE.md  CURVE_TOOLS_ARCHITECTURE.md  EXPORT_TOOLS_ARCHITECTURE.md  EXTRACTION_TOOLS_ARCHITECTURE.md  LATTICE_TOOLS_ARCHITECTURE.md  MATERIAL_TOOLS_ARCHITECTURE.md  MEGA_TOOLS_ARCHITECTURE.md  MESH_TOOLS_ARCHITECTURE.md  MODELING_TOOLS_ARCHITECTURE.md  SCENE_TOOLS_ARCHITECTURE.md  SCULPT_TOOLS_ARCHITECTURE.md  SYSTEM_TOOLS_ARCHITECTURE.md  UV_TOOLS_ARCHITECTURE.md
addon/blender-ai-mcp-main/blender-ai-mcp-main/_docs/_ADDON/: README.md  rpc_architecture.md
addon/blender-ai-mcp-main/blender-ai-mcp-main/blender_addon/: __init__.py
addon/blender-ai-mcp-main/blender-ai-mcp-main/scripts/: build_addon.py  run_e2e_tests.py  translate_docs.py
addon/blender-ai-mcp-main/blender-ai-mcp-main/server/: __init__.py  main.py
addon/blender-ai-mcp-main/blender-ai-mcp-main/tests/: conftest.py
(+460 files in other folders)
